--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <h1>hello</h1>
 <p>are you sure about that</p>
-<a href="polimeraze.github.io/Suito/about">click me</a>
+<a href="/about">click me</a>
