--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
 <h1>hello</h1>
 <p>are you sure about that</p>
 <a href="about">click me</a>
+<form action="insert.php" method="post">     
+Value1: <input type="text" name="field1-name" />
+Value2: <input type="text" name="field2-name" />
+Value3: <input type="text" name="field3-name" />
+Value4: <input type="text" name="field4-name" />
+Value5: <input type="text" name="field5-name" />
+<input type="Submit" /></form>
